perf: Reduce allocations for program rules evaluation [DHIS2-21178] (#23346)
* Code review fixes